--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'ＭＳ Ｐ明朝';
-	background-image: url(./images/4-100.jpg);
+	background-image: url(./4-100.jpg);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
