--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>@title</title>
+    <meta name="description" content="@description" />
 </head>
 <body>
     @contents
