--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>@title</title>
     <meta name="description" content="@description" />
+    <link href="styles/style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     @contents
