respect & imitation pistachiostudio.net

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,11 +4,107 @@
     <meta charset="utf-8">
     <title>@title</title>
     <meta name="description" content="@description" />
-    <link href="styles/style.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <!-- CSS IMPORT -->
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/setuptools_vhs.css" />
+    <link rel="stylesheet" href="styles/setuptools_style.css" />
+    <!-- GOOGLE FONT IMPORT FROM CDN -->
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
+    <!-- VIEWPORT FOR RESPONSIVE -->
+    <meta name="viewport" content="width=device-width" />
 </head>
 <body>
-    @contents
+
+    <!-- BACKGROUND LINE NOISE -->
+    <div class="lines"></div>
+
+    <!-- LEFT TOP DOT ICON, IF YOU WANT EDIT SEE "dot.css" -->
+    <div class="cc_cat_dot_sut"></div>
+
+
+    <!-- MAIN RGB NOISE -->
+    <div class="main">
+        <div class="noise"></div>
+        <div class="vhs">
+
+            <!-- TOP INFORMATION 
+            <div class="doggo">*</div>
+            <span class="typew"><a href="https://twitter.com/pstchstd/status/1580928132051529728"
+                    target="_blank">Zaishen</a>, can you hear me?<br>Theme: <a href="https://setuptools.pypa.io/en/latest/" target="_blank">SETUPTOOLS</a>
+            </span>
+            -->
+
+            <h1>
+                <a id="title" href="/">@title</a>
+            </h1>
+
+            <h2 class="typek">@description
+            </h2>
+            <!-- SOCIAL ICONS USING FONT AWESOME -->
+            <ul class="social">
+                <li>
+                    <a id="social" href="https://twitter.com/zztkm" target="_blank"><i
+                            class="fa-brands fa-twitter fa-shake"></i></a>
+                </li>
+                <li>
+                    <a id="social" href="https://github.com/zztkm" target="_blank">
+                        <i class="fa-brands fa-github fa-shake"></i></a>
+                </li>
+                <li>
+                    <a id="social" href="/contact"><i class="fa-regular fa-envelope fa-shake"></i></a>
+                </li>
+            </ul>
+
+            <!-- @CONTENTS -->
+            @contents
+            <!-- /@CONTENTS -->
+
+            <!-- JQUERY IMPORT FROM CDN HOSTED BY GOOGLE -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+            <!-- TYPEWRITER EFFECT JS IMPORT -->
+            <script src="./js/t.js"></script>
+            <!-- <script src="https://pistachiostudio.github.io/pistachio-on-vss/js/t.js"></script> -->
+
+            <!-- H2 CLASS "typek" TYPEWRITER EFFECT SETTINGS -->
+            <script>
+                $(function () {
+                    $(".typek").t({
+                        caret: '<span style="color:hotpink;">•</span>',
+                        speed: 25,
+                        beep: false,
+                        mistype: 10,
+                        locale: "en",
+                        speed_vary: true,
+                        blink: true,
+                        delay: 1.4,
+                    });
+                });
+            </script>
+
+            <!-- SPAN CLASS "typew" TYPEWRITER EFFECT SETTINGS
+    (TOP MESSAGE) -->
+            <script>
+                $(function () {
+                    $(".typew").t({
+                        caret: '<span style="color:magenta;">]</span>',
+                        speed: 10,
+                        beep: false,
+                        mistype: false,
+                        locale: "en",
+                        speed_vary: true,
+                        blink: true,
+                        delay: 0.1,
+                    });
+                });
+            </script>
+
+	<div class="footer">
+        Acknowledgments: <a href="https://github.com/vssio" target="_blank">VSS</a>,
+        GitHub repository: <a href="https://github.com/zztkm/darts.tsurutatakumi.info" target="_blank">darts.tsurutatakumi.infp repo</a></br>
+        Hosted by: <a href="https://pages.cloudflare.com/" target="_blank">Cloudflare Pages</a></br>
+    </div>
+
+        </div>
+    </div>
 </body>
