--- a/layouts/index.html
+++ b/layouts/index.html
@@ -101,7 +101,7 @@
 
 	<div class="footer">
         Acknowledgments: <a href="https://github.com/vssio" target="_blank">VSS</a>,
-        GitHub repository: <a href="https://github.com/zztkm/darts.tsurutatakumi.info" target="_blank">darts.tsurutatakumi.infp repo</a></br>
+        GitHub repository: <a href="https://github.com/zztkm/tsurutatakumi.info" target="_blank">tsurutatakumi.info</a></br>
         Hosted by: <a href="https://pages.cloudflare.com/" target="_blank">Cloudflare Pages</a></br>
     </div>
 
