--- a/layouts/slides/index.html
+++ b/layouts/slides/index.html
@@ -28,7 +28,8 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
-				hash: true,
+				hash: false,
+				center: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealHighlight ]
